# talk_to_your_website

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-pto-url-chat-sdk-and-api.ipynb
src/: api.py  url_chat.py
talk_to_your_website/: __init__.py  dataset.py  features.py  plots.py
talk_to_your_website/modeling/: predict.py  train.py
