[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "talk_to_your_website"
version = "0.0.1"
description = "Given a website URL, we want to have a conversational interface to talk to URL content."
authors = [
  { name = "Pietro TANURE" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["talk_to_your_website"]
force_sort_within_sections = true
